force-app/main/default/objects/FunnelAdditionTarget__c/FunnelAdditionTarget__c.object-meta.xml
<CustomObject>
    <description>Funnel Addition Target calculations per user. Data based on Gauge Custom Setting Quota and Commit Case History summery values.</description>
    <label>FunnelAdditionTarget</label>
    <nameField>
        <displayFormat>FAC-{000000}</displayFormat>
        <label>Funnel Addition Calculation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FunnelAdditionTargets</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>