force-app/main/default/objects/FunnelAdditionTarget__c/fields/FunnelAdditionTarget__c.field-meta.xml
<CustomField>
    <fullName>FunnelAdditionTarget__c</fullName>
    <label>Funnel Addition Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>