force-app/main/default/objects/FunnelAdditionTarget__c/fields/New_Product_Funnel_Target__c.field-meta.xml
<CustomField>
    <fullName>New_Product_Funnel_Target__c</fullName>
    <label>New Product Funnel Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>