force-app/main/default/objects/FunnelAdditionTarget__c/fields/PeriodFunnel__c.field-meta.xml
<CustomField>
    <fullName>PeriodFunnel__c</fullName>
    <label>Period Funnel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>