force-app/main/default/objects/FunnelAdditionTarget__c/fields/PreviousPeriodCCAccuracy__c.field-meta.xml
<CustomField>
    <fullName>PreviousPeriodCCAccuracy__c</fullName>
    <label>Previous Period CC Accuracy</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>