force-app/main/default/objects/FunnelAdditionTarget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>PeriodStart__c</columns>
    <columns>PeriodEnd__c</columns>
    <columns>Seller__c</columns>
    <columns>FunnelAdditionTarget__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Period__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>PeriodFunnel__c</columns>
    <columns>New_Product_Funnel__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>